[gd_scene load_steps=35 format=2]

[ext_resource path="res://scripts/FiltersManager.gd" type="Script" id=1]
[ext_resource path="res://shaders/sine_wave.shader" type="Shader" id=2]
[ext_resource path="res://shaders/Sobel.shader" type="Shader" id=3]
[ext_resource path="res://shaders/gameboytest.shader" type="Shader" id=4]
[ext_resource path="res://shaders/waterly.shader" type="Shader" id=5]
[ext_resource path="res://shaders/displacement.shader" type="Shader" id=6]
[ext_resource path="res://shaders/fake_ascii.shader" type="Shader" id=7]
[ext_resource path="res://shaders/quad_mirror.shader" type="Shader" id=8]
[ext_resource path="res://shaders/floy-steinberg.shader" type="Shader" id=9]
[ext_resource path="res://shaders/color-bending.shader" type="Shader" id=10]
[ext_resource path="res://assets/effects/phaser1.tres" type="AudioEffectPhaser" id=11]
[ext_resource path="res://assets/effects/reverb1.tres" type="AudioEffectReverb" id=12]
[ext_resource path="res://assets/effects/gb_highpass.tres" type="AudioEffectHighPassFilter" id=13]
[ext_resource path="res://assets/effects/gb_distorsion.tres" type="AudioEffectDistortion" id=14]
[ext_resource path="res://assets/effects/gb_eq.tres" type="AudioEffectEQ" id=15]
[ext_resource path="res://assets/effects/chorus1.tres" type="AudioEffectChorus" id=16]
[ext_resource path="res://assets/effects/delay_chorus1.tres" type="AudioEffectDelay" id=17]
[ext_resource path="res://assets/effects/delay_eq.tres" type="AudioEffectEQ" id=18]
[ext_resource path="res://assets/effects/delay1.tres" type="AudioEffectDelay" id=19]
[ext_resource path="res://assets/effects/reverb_delay1.tres" type="AudioEffectReverb" id=20]
[ext_resource path="res://assets/effects/distorsion1.tres" type="AudioEffectDistortion" id=21]
[ext_resource path="res://assets/effects/eq_distorsion1.tres" type="AudioEffectEQ" id=22]
[ext_resource path="res://assets/effects/phaser_distorsion1.tres" type="AudioEffectPhaser" id=23]
[ext_resource path="res://assets/effects/delay2_phaser.tres" type="AudioEffectPhaser" id=24]
[ext_resource path="res://assets/effects/delay2.tres" type="AudioEffectDelay" id=25]
[ext_resource path="res://assets/effects/phaser2.tres" type="AudioEffectPhaser" id=26]
[ext_resource path="res://assets/effects/complex1_eq.tres" type="AudioEffectEQ6" id=27]
[ext_resource path="res://assets/effects/complex1_distorsion.tres" type="AudioEffectDistortion" id=28]
[ext_resource path="res://assets/effects/complex1_chorus.tres" type="AudioEffectChorus" id=29]
[ext_resource path="res://assets/effects/complex1_reverb.tres" type="AudioEffectReverb" id=30]
[ext_resource path="res://scenes/Main.tscn" type="PackedScene" id=31]
[ext_resource path="res://scripts/UI.gd" type="Script" id=32]
[ext_resource path="res://scenes/DynamicText.tscn" type="PackedScene" id=33]

[sub_resource type="ShaderMaterial" id=1]

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FiltersManager" type="ViewportContainer" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 250, 990 )
stretch = true
script = ExtResource( 1 )
shaders = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]
orthogonal = [ 2, 6 ]
audio_effects = [ [ ExtResource( 11 ) ], [ ExtResource( 12 ) ], [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ], [ ExtResource( 16 ), ExtResource( 17 ) ], [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ], [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ], [ ExtResource( 24 ), ExtResource( 25 ) ], [ ExtResource( 26 ) ], [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ] ]

[node name="Viewport" type="Viewport" parent="FiltersManager"]
size = Vector2( 1280, 720 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Main" parent="FiltersManager/Viewport" instance=ExtResource( 31 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 32 )

[node name="PressStart" parent="UI" instance=ExtResource( 33 )]
text = "Press Enter"
blinking = true

[node name="Rules" parent="UI" instance=ExtResource( 33 )]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.7
anchor_bottom = 0.8
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 640, 0 )
display_on_start = false
text = "Use keys from 1 to 9 to play the instruments"
fade_time = 1.2

[node name="Rules2" parent="UI" instance=ExtResource( 33 )]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.7
anchor_bottom = 0.8
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 640, 0 )
display_on_start = false
text = "You can use Space to toggle bouncing sounds"
fade_time = 1.2

[node name="Quit" parent="UI" instance=ExtResource( 33 )]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.2
anchor_bottom = 0.3
display_on_start = false
text = "Hold ESC to quit"

[node name="Restart" parent="UI" instance=ExtResource( 33 )]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_bottom = 60.0
display_on_start = false
text = "Press Enter to play again"
fade_time = 3.0

[node name="Bouncing" parent="UI" instance=ExtResource( 33 )]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
display_on_start = false
text = "Bouncing sounds disabled"
fade_time = 0.1

[node name="RulesTimer" type="Timer" parent="UI"]
wait_time = 5.0
one_shot = true

[node name="BouncingTimer" type="Timer" parent="UI"]
wait_time = 2.0
one_shot = true

[node name="BounceRuleTimer" type="Timer" parent="UI"]
wait_time = 20.0
one_shot = true
[connection signal="end" from="FiltersManager/Viewport/Main" to="UI" method="display_end"]
[connection signal="intro_end" from="FiltersManager/Viewport/Main" to="UI" method="show_rules"]
[connection signal="restart" from="FiltersManager/Viewport/Main" to="UI" method="hide_end"]
[connection signal="start" from="FiltersManager/Viewport/Main" to="UI" method="remove_start"]
[connection signal="toggle_collision_sound" from="FiltersManager/Viewport/Main" to="UI" method="set_bouncing"]
